[gd_scene load_steps=17 format=3 uid="uid://b6t1fmlc7s4og"]

[ext_resource type="Script" path="res://scenes/player/scripts/player.gd" id="1_v0enf"]
[ext_resource type="Texture2D" uid="uid://b75143mxb0g3o" path="res://assets/player.png" id="2_h6g1b"]
[ext_resource type="Script" path="res://resources/fsm/state_machine.gd" id="3_kwhh1"]
[ext_resource type="Script" path="res://scenes/player/scripts/idle.gd" id="4_62sx3"]
[ext_resource type="Script" path="res://scenes/player/scripts/air.gd" id="5_voxy6"]
[ext_resource type="Script" path="res://scenes/player/scripts/run.gd" id="6_r1jjr"]
[ext_resource type="Script" path="res://scenes/player/scripts/jump.gd" id="7_jtbly"]
[ext_resource type="Script" path="res://scenes/player/scripts/platform.gd" id="8_mlorx"]
[ext_resource type="Script" path="res://scenes/player/scripts/wall_jump.gd" id="9_nbart"]
[ext_resource type="Texture2D" uid="uid://4d1s4fwjf6xl" path="res://assets/expand_icon.png" id="10_k34gq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rj3nx"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhvu0"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_g5sil"]
resource_name = "show_expand"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExpandIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.129412)]
}

[sub_resource type="Animation" id="Animation_7pv5g"]
resource_name = "hide_expand"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExpandIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.0745098), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8ph3o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExpandIcon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.129412)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yyrxv"]
_data = {
"RESET": SubResource("Animation_8ph3o"),
"hide_expand": SubResource("Animation_7pv5g"),
"show_expand": SubResource("Animation_g5sil")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 57345
script = ExtResource("1_v0enf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h6g1b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rj3nx")

[node name="PlatformArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformArea"]
shape = SubResource("RectangleShape2D_bhvu0")

[node name="RightCollider" type="RayCast2D" parent="."]
position = Vector2(0, 24)
target_position = Vector2(34, 0)

[node name="LeftCollider" type="RayCast2D" parent="."]
position = Vector2(0, 24)
target_position = Vector2(-34, 0)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_kwhh1")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_62sx3")
tag = "idle"

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource("5_voxy6")
tag = "air"

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("6_r1jjr")
tag = "run"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("7_jtbly")
tag = "jump"

[node name="Platform" type="Node" parent="StateMachine"]
script = ExtResource("8_mlorx")
tag = "platform"

[node name="WallJump" type="Node" parent="StateMachine"]
script = ExtResource("9_nbart")
tag = "wall_jump"

[node name="ExpandIcon" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.129412)
texture = ExtResource("10_k34gq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yyrxv")
}

[connection signal="area_entered" from="PlatformArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="PlatformArea" to="." method="_on_area_2d_area_exited"]
